Fixed two page covers

--- a/app/assets/stylesheets/attractions.css.scss
+++ b/app/assets/stylesheets/attractions.css.scss
@@ -244,7 +244,7 @@ h4 b:after{
 .paragraph p {
 	font-family:"Futura Book", "Futura", sans-serif;
 	max-width: 800px;
-	text-align: left;
+	text-align: center;
 	color: #fff;
 	font-size: 16px;
 	margin: auto;
